--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">欢迎使用雷电发卡机器人!</div>
         <div class="intro-heading text-uppercase">打造全网最稳定的微信发卡机器人</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">进一步了解</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">进一步了解</a>
       </div>
     </div>
   </header>
