--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           </div>
           <div class="row">
             <div class="text-muted">
-              <a href="https://www.lanzous.com/i3t3jih" target="_blank">https://www.lanzous.com/i3t3jih</a>
+              <a href="https://www.lanzous.com/i3tbsde" target="_blank">下载链接</a>
             </div>
           </div>
         </div>
