--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
   </section>
 
     <!-- Download -->
-    <section id="download">
+    <section id="download" style="background-color: #c5c3c3">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center">
@@ -270,10 +270,23 @@
               <h3 class="section-subheading text-muted">- 机器人最新下载地址 -</h3>
             </div>
           </div>
-          <div class="row">
+          <div>
             <div class="text-muted">
-              <a href="https://www.lanzous.com/i3tbsde" target="_blank">下载链接</a>
+              <a href="https://www.lanzous.com/i3tbsde" target="_blank">雷电机器人 下载链接</a>
             </div>
+            <div class="text-muted">
+              <a href="https://t.cn/EXHWMeA" target="_blank">雷电机器人-年卡</a>
+            </div>
+            <div class="text-muted">
+              <a href="https://t.cn/EXHjGa5" target="_blank">雷电机器人-季卡</a>
+            </div>
+            <div class="text-muted">
+              <a href="https://t.cn/EXHlp9l" target="_blank">雷电机器人-月卡</a>
+            </div>
+            <div class="text-muted">
+              <a href="https://t.cn/EXHjdPk" target="_blank">雷电机器人-天卡 (联系客服免费获得体验卡)</a>
+            </div>
+            <div>联系客服免费获得体验卡(天卡或小时卡)</div>
           </div>
         </div>
       </section>
@@ -437,6 +450,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">联系我们</h2>
+          <h3 class="section-subheading text-muted"><p style="color: white">- 加客服微信，免费获取体验卡 (天卡或小时卡) -</p></h3>
         </div>
       </div>
       <div class="row">
