--- a/index.html
+++ b/index.html
@@ -421,12 +421,12 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">软件下载</h2>
-            <h3 class="section-subheading text-muted">- 机器人最新下载地址 -</h3>
+            <h3 class="section-subheading text-muted">- 机器人最新下载地址 版本 2.4-</h3>
           </div>
         </div>
         <div>
           <div class="text-muted">
-            <a href="https://www.lanzous.com/i3tbsde" target="_blank">雷电机器人 下载链接</a>
+            <a href="https://www.lanzous.com/i3tjlwj" target="_blank">蓝奏云 下载链接</a>
           </div>
           <div class="text-muted">
             <a href="https://t.cn/EXHWMeA" target="_blank">雷电机器人-年卡</a>
