--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </header>
 
   <!-- Portfolio Grid -->
-  <section class="bg-light" id="portfolio">
+  <section id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
